# llvm-project

clang-tools-extra/clang-rewrite/: CMakeLists.txt  ClangRewrite.cpp  ClangRewriteUtils.h  CodeAction.h  CodeLiteralsCallback.h  ConstructMatchers.cpp  ConstructMatchers.h  FindLiteralsCallback.h  LICENSE.txt  LocalASTMatchers.h  MatcherGenCallback.h  MatcherWrapper.h  NameRewriterCallback.h  NewCodeCallback.h  README.md  ReplaceBindingsCallback.h  ReplacerInternalCallback.h  RewriteCallback.h  RewriteInternalCallback.h  SetupCallback.h  cite.bib  paper.md
clang-tools-extra/clang-rewrite/include/: ClangRewriteMacros.h
clang-tools-extra/clang-rewrite/tests/: clang_rewrite_hip.h  fake_hip.h  new.cpp  test_matchers.cpp
clang-tools-extra/clang-rewrite/tests/hipify/: clang_rewrite_hip.h  fake_hip.h  fake_hip_driver_types.h  fake_hip_runtime_api.h  fake_hip_surface_types.h  fake_hip_texture_types.h  fake_hip_version.h  hipify-x2-threads.cpp  hipify.cpp  hipify.patch  mini-nbody.tar
clang-tools-extra/clang-rewrite/tests/inst/: inst.cpp  test.cpp  testcode-small.cpp  testmatcher-small.cpp
clang-tools-extra/clang-rewrite/tests/modernize-use-nullptr/: spec.cpp  test.cpp
clang-tools-extra/clang-rewrite/tests/pragmas/: a.out  clang_rewrite_temp_source.cpp  clang_rewrite_temp_source.cpp.0.bind.cpp  clang_rewrite_temp_source.cpp.1.bind.cpp  clang_rewrite_temp_source.cpp.2.bind.cpp  clang_rewrite_temp_source.cpp.3.bind.cpp  clang_rewrite_temp_source.cpp.4.bind.cpp  clang_rewrite_temp_source.cpp.5.bind.cpp  clang_rewrite_temp_source.cpp.6.bind.cpp  clang_rewrite_temp_source.cpp.attr.cpp  codegen.py  test  test-code.cpp  test-code.cpp.rewrite.cpp  test-matcher.cpp  test-spec.cpp
clang-tools-extra/unittests/clang-rewrite/: CMakeLists.txt  CodeActionTests.cpp  RewriteTests.cpp
(+36 files in other folders)
